# cbsrm

./: .gitignore  CHANGELOG.md  CLAUDE_CODE_HOOKS_PLAN.md  CLAUDE_CODE_OPERATING_SYSTEM.md  CLAUDE_CODE_PROMPT_LIBRARY.md  CLAUDE_CODE_SUBAGENT_PLAN.md  COLD_EMAILS.md  CONTRIBUTING.md  CUSTOMER_DISCOVERY_v0.8.md  GITHUB_RELEASE_v0.8.0.md  GITHUB_RELEASE_v0.9.0.md  LAUNCH_COMMAND_CENTER.md  LAUNCH_POSTS_v0.8.0.md  LICENSE  NEXT_30_DAYS_AGENT_WORKFLOW.md  PRODUCT_ROADMAP_v0.9.md  README.md  SHOW_HN_POST.md  SSRN_SUBMISSION.md  SUBMISSION_CHECKLIST.md  index.html  netlify.toml  pyproject.toml
cbsrm/: __init__.py  cli.py  i18n.py
dashboard/: README.md  build_terminal_data.py  cbsrm_terminal_data.json  contagion_network_viewer.py  crisis_dossier_viewer.py  macro_composite_viewer.py  report_catalog_viewer.py  requirements.txt  streamlit_app.py
docs/: v0.8_research_flow.md
examples/: quickstart.py  run_ciss_us.py
site/: DEPLOY.md  _headers  current.json  explorer.html  history.json  index.html  terminal.html
tests/: test_api_crisis_dossiers.py  test_api_crisis_dossiers_live.py  test_api_hardening.py  test_api_macro_composite.py  test_api_report_registry.py  test_audit_chain.py  test_audit_manifest.py  test_audited_indicator.py  test_bis_sdmx.py  test_ciss_us_builder.py  test_ciss_us_canonical.py  test_cli_crisis_dossier.py  test_cli_crisis_dossier_live.py  test_cli_macro_composite.py  test_cli_report_catalog.py  test_contagion_elements.py  test_crisis_dossiers.py  test_crisis_replay.py  test_debt_rank.py  test_delta_covar.py  test_dy_spillover.py  test_ecb.py  test_fred.py  test_indicators.py  test_live_dossier_clients.py  test_live_dossiers.py  test_macro_composite_report.py  test_macro_events.py  test_macro_replay.py  test_mes.py  test_ofr.py  test_ofr_fsi.py  test_pdf_renderer.py  test_phase_classifier.py  test_replication.py  test_report_manifest.py  test_report_persistence.py  test_report_registry.py  test_report_renderer.py  test_report_renderer_html.py  (+4 more)
tools/: build_current_snapshot.py  build_history_snapshot.py  build_whitepaper_html.py  check_snapshot.py  i18n_embed.py  i18n_extract.py
whitepaper/: cbsrm_methodology_v1.docx  (+2 more)
(+54 files in other folders)
