[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbsrm"
version = "0.8.0"
description = "Cross-Border Systemic Risk Monitor — open-source quantitative framework for cross-jurisdiction financial-stability monitoring"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "WaverVanir International LLC" },
]
keywords = [
    "systemic-risk", "financial-stability", "central-bank",
    "supervisory-ai", "regtech", "macro", "stress-index",
    "ciss", "srisk", "covar",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.26",
    "pydantic>=2.5",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
indicators = [
    "scipy>=1.11",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.8",
]
all = [
    "cbsrm[api,indicators,dev]",
]

[project.urls]
Homepage = "https://github.com/pravo123/cbsrm"
Documentation = "https://github.com/pravo123/cbsrm/blob/main/README.md"
Whitepaper = "https://github.com/pravo123/cbsrm/blob/main/whitepaper/cbsrm_methodology_v1.md"
Issues = "https://github.com/pravo123/cbsrm/issues"

[project.scripts]
cbsrm = "cbsrm.cli:main"

[tool.setuptools.packages.find]
include = ["cbsrm*"]
exclude = ["tests*", "whitepaper*", "notebooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]
